--- a/interfaces/HO-Portal/src/app/program/program.component.html
+++ b/interfaces/HO-Portal/src/app/program/program.component.html
@@ -72,6 +72,7 @@
         
         <app-program-people-affected [selectedPhase]="selectedPhase"
                                      [programId]="program?.id"
+                                     [userRole]="currentUserRole"
         ></app-program-people-affected>
 
         <app-program-people [selectedPhase]="selectedPhase"
