--- a/interfaces/PA-App/src/app/shared/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/PA-App/src/app/shared/dialogue-turn/dialogue-turn.component.html
@@ -14,11 +14,6 @@
     <ion-avatar *ngIf="isSelf" style="background:#2f4bfd; display:flex;">
       <ion-icon name="person" color="light" size="large" style="margin:auto;"></ion-icon>
     </ion-avatar>
-    <div *ngIf="!isSystem && !isSelf && isNgoA">
-      <ion-avatar style="border-radius: 0 !important;">
-        <img [alt]="actor" src="./assets/logos/ngo-a.png">
-      </ion-avatar>
-    </div>
     <div *ngIf="!isSystem && !isSelf && isNgoDorcas">
       <ion-avatar style="border-radius: 0 !important;">
         <img [alt]="actor" src="./assets/logos/dorcas-270x270.png">
@@ -29,7 +24,7 @@
         <img [alt]="actor" src="./assets/logos/eagles-relief.png">
       </ion-avatar>
     </div>
-    <div *ngIf="!isSystem && !isSelf && !isNgoA && !isNgoDorcas && !isNgoEagles">
+    <div *ngIf="!isSystem && !isSelf && !isNgoDorcas && !isNgoEagles">
       <ion-avatar style="color:black; background:white; display:flex;">
         <b style="margin:auto; text-align: center;">{{ actor }}</b>
       </ion-avatar>
