AB#1850 Make Play-button always round, remove variants

--- a/interfaces/PA-App/src/app/shared/play-text-audio/play-text-audio.component.html
+++ b/interfaces/PA-App/src/app/shared/play-text-audio/play-text-audio.component.html
@@ -8,11 +8,7 @@
             [attr.title]="buttonLabel"
             [attr.aria-label]="buttonLabel"
             (click)="toggleState()"
-            [ngClass]="{
-              'is-for-submit': (type === buttonTypes.forSubmit),
-              'is-thin': (type === buttonTypes.forSubmit) || (type === buttonTypes.forRadio),
-              'play-text-audio': true
-            }"
+            class="play-text-audio"
 >
   <ion-icon [name]="iconName"
             size="small"
