--- a/interfaces/PA-App/src/app/personal-components/preprinted-qrcode/preprinted-qrcode.component.html
+++ b/interfaces/PA-App/src/app/personal-components/preprinted-qrcode/preprinted-qrcode.component.html
@@ -1,6 +1,6 @@
 <section>
   <dialogue-turn [actor]="program?.ngo">
-    <play-text-audio key="personal.preprinted-qrcode.introduction" class="ion-float-end ion-margin-start"></play-text-audio>
+    <play-text-audio key="personal.preprinted-qrcode.introduction" class="ion-float-start ion-margin-end"></play-text-audio>
     <p>
       {{ 'personal.preprinted-qrcode.introduction'|translate }}
     </p>
