--- a/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
@@ -1,6 +1,6 @@
 <section #selectProgram>
   <dialogue-turn>
-    <play-text-audio key="personal.select-program.introduction" class="ion-float-end ion-margin-start"></play-text-audio>
+    <play-text-audio key="personal.select-program.introduction" class="ion-float-start ion-margin-end"></play-text-audio>
     <p>
       {{ 'personal.select-program.introduction'|translate }}
     </p>
