--- a/interfaces/PA-App/src/app/personal-components/signup-signin/signup-signin.component.html
+++ b/interfaces/PA-App/src/app/personal-components/signup-signin/signup-signin.component.html
@@ -1,6 +1,6 @@
 <section #signupSignin>
   <dialogue-turn>
-    <play-text-audio key="personal.signup-signin.introduction" class="ion-float-end ion-margin-start"></play-text-audio>
+    <play-text-audio key="personal.signup-signin.introduction" class="ion-float-start ion-margin-end"></play-text-audio>
     <p>
       {{ 'personal.signup-signin.introduction'|translate }}
     </p>
