--- a/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
@@ -3,13 +3,13 @@
                  *ngIf="programDetails?.title"
                  [isSpoken]="programDetails?.title"
   >
-    <play-text-audio key="personal.enroll-in-program.introduction" class="ion-float-end ion-margin-start"></play-text-audio>
+    <play-text-audio key="personal.enroll-in-program.introduction" class="ion-float-start ion-margin-end"></play-text-audio>
     <div [innerHTML]="'personal.enroll-in-program.introduction'|translate:{ programTitle:'<strong>'+programDetails?.title+'</strong>', ngo:'<strong>'+programDetails?.ngo+'</strong>' }"
          class="ion-margin-bottom"
     ></div>
 
     <div class="ion-margin-vertical">
-      <play-text-audio key="personal.enroll-in-program.introduction-questions" class="ion-float-end ion-margin-start"></play-text-audio>
+      <play-text-audio key="personal.enroll-in-program.introduction-questions" class="ion-float-start ion-margin-end"></play-text-audio>
       {{ 'personal.enroll-in-program.introduction-questions'|translate }}
     </div>
 
@@ -31,7 +31,7 @@
                  *ngIf="dobFeedback"
                  [isSpoken]="dobFeedback"
   >
-    <play-text-audio key="personal.enroll-in-program.dob-feedback" class="ion-float-end ion-margin-start"></play-text-audio>
+    <play-text-audio key="personal.enroll-in-program.dob-feedback" class="ion-float-start ion-margin-end"></play-text-audio>
     <p>
       {{ 'personal.enroll-in-program.dob-feedback'|translate }}
     </p>
@@ -40,7 +40,7 @@
                  *ngIf="hasAnswered"
                  [isSpoken]="hasAnswered"
   >
-    <play-text-audio key="personal.enroll-in-program.please-confirm" class="ion-float-end ion-margin-start"></play-text-audio>
+    <play-text-audio key="personal.enroll-in-program.please-confirm" class="ion-float-start ion-margin-end"></play-text-audio>
     <p>
       {{ 'personal.enroll-in-program.please-confirm'|translate }}
     </p>
