--- a/interfaces/PA-App/src/app/personal-components/handle-proof/handle-proof.component.html
+++ b/interfaces/PA-App/src/app/personal-components/handle-proof/handle-proof.component.html
@@ -1,11 +1,11 @@
 <section>
   <dialogue-turn [actor]="currentProgram?.ngo">
     <p>
-      <play-text-audio key="personal.handle-proof.creating" class="ion-float-end ion-margin-start"></play-text-audio>
+      <play-text-audio key="personal.handle-proof.creating" class="ion-float-start ion-margin-end"></play-text-audio>
       {{ 'personal.handle-proof.creating'|translate }}
     </p>
     <p *ngIf="hasNotificationNumberSet">
-      <play-text-audio key="personal.handle-proof.notify" class="ion-float-end ion-margin-start"></play-text-audio>
+      <play-text-audio key="personal.handle-proof.notify" class="ion-float-start ion-margin-end"></play-text-audio>
       {{ 'personal.handle-proof.notify'|translate }}
     </p>
   </dialogue-turn>
@@ -15,11 +15,11 @@
                  [isSpoken]="inclusionStatus"
   >
     <p *ngIf="inclusionStatusNegative">
-      <play-text-audio key="personal.handle-proof.inclusion-status-negative" class="ion-float-end ion-margin-start"></play-text-audio>
+      <play-text-audio key="personal.handle-proof.inclusion-status-negative" class="ion-float-start ion-margin-end"></play-text-audio>
       {{ 'personal.handle-proof.inclusion-status-negative'|translate }}
     </p>
     <p *ngIf="inclusionStatusPositive">
-      <play-text-audio key="personal.handle-proof.inclusion-status-positive" class="ion-float-end ion-margin-start"></play-text-audio>
+      <play-text-audio key="personal.handle-proof.inclusion-status-positive" class="ion-float-start ion-margin-end"></play-text-audio>
       {{ 'personal.handle-proof.inclusion-status-positive'|translate }}
     </p>
   </dialogue-turn>
