--- a/interfaces/PA-App/src/app/personal-components/select-appointment/select-appointment.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-appointment/select-appointment.component.html
@@ -1,7 +1,7 @@
 <section>
   <dialogue-turn [actor]="program?.ngo">
     <p>
-      <play-text-audio key="personal.select-appointment.introduction" class="ion-float-end ion-margin-start"></play-text-audio>
+      <play-text-audio key="personal.select-appointment.introduction" class="ion-float-start ion-margin-end"></play-text-audio>
       {{ 'personal.select-appointment.introduction'|translate }}
     </p>
     <div class="ion-margin-top">
@@ -61,7 +61,7 @@
                  *ngIf="timeslotSubmitted"
                  [isSpoken]="timeslotSubmitted"
   >
-    <play-text-audio key="personal.select-appointment.thanks-repeat" class="ion-float-end ion-margin-start"></play-text-audio>
+    <play-text-audio key="personal.select-appointment.thanks-repeat" class="ion-float-start ion-margin-end"></play-text-audio>
     <p>
       {{ 'personal.select-appointment.thanks-repeat'|translate }}
     </p>
@@ -133,7 +133,7 @@
                  *ngIf="isDisabled"
                  [isSpoken]="isDisabled"
   >
-    <play-text-audio key="personal.select-appointment.conclusion" class="ion-float-end ion-margin-start"></play-text-audio>
+    <play-text-audio key="personal.select-appointment.conclusion" class="ion-float-start ion-margin-end"></play-text-audio>
     <p>
       {{ 'personal.select-appointment.conclusion'|translate }}
     </p>
