--- a/interfaces/PA-App/src/app/personal-components/select-country/select-country.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-country/select-country.component.html
@@ -1,6 +1,6 @@
 <section #selectCountry>
   <dialogue-turn>
-    <play-text-audio key="personal.select-country.introduction" class="ion-float-end ion-margin-start"></play-text-audio>
+    <play-text-audio key="personal.select-country.introduction" class="ion-float-start ion-margin-end"></play-text-audio>
     <p>
       {{ 'personal.select-country.introduction'|translate }}
     </p>
@@ -35,7 +35,7 @@
   <dialogue-turn *ngIf="isDisabled"
                  [isSpoken]="isDisabled"
   >
-    <play-text-audio key="personal.select-country.conclusion" class="ion-float-end ion-margin-start"></play-text-audio>
+    <play-text-audio key="personal.select-country.conclusion" class="ion-float-start ion-margin-end"></play-text-audio>
     <p [innerHTML]="'personal.select-country.conclusion'|translate:{ country:'<strong>'+countryChoiceName+'</strong>' }"></p>
   </dialogue-turn>
 </section>
