--- a/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
+++ b/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
@@ -3,7 +3,7 @@
                  *ngIf="credentialReceived"
                  [isSpoken]="credentialReceived"
   >
-    <play-text-audio key="personal.store-credential.done" class="ion-float-end ion-margin-start"></play-text-audio>
+    <play-text-audio key="personal.store-credential.done" class="ion-float-start ion-margin-end"></play-text-audio>
     <p [innerHTML]="'personal.store-credential.done'|translate:{ ngo:'<strong>'+currentProgram?.ngo+'</strong>' }"></p>
   </dialogue-turn>
   <br>
@@ -13,7 +13,7 @@
                  [isSpoken]="credentialReceived"
                  isConnected="true"
   >
-    <play-text-audio key="personal.store-credential.received" class="ion-float-end ion-margin-start"></play-text-audio>
+    <play-text-audio key="personal.store-credential.received" class="ion-float-start ion-margin-end"></play-text-audio>
     <p>
       {{ 'personal.store-credential.received'|translate }}
     </p>
@@ -23,7 +23,7 @@
                  [isSpoken]="credentialStored"
                  isConnected="true"
   >
-    <play-text-audio key="personal.store-credential.stored" class="ion-float-end ion-margin-start"></play-text-audio>
+    <play-text-audio key="personal.store-credential.stored" class="ion-float-start ion-margin-end"></play-text-audio>
     <p>
       {{ 'personal.store-credential.stored'|translate }}
     </p>
