--- a/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
+++ b/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
@@ -72,7 +72,7 @@
   >
     <dialogue-turn [isSpoken]="checkValidationErrors(question.code)">
       <p *ngIf="(question.answerType === answerType.phoneNumber) && validationErrors.includes('phoneNumber')">
-        <play-text-audio key="validation.phoneNumber" class="ion-float-end ion-margin-start"></play-text-audio>
+        <play-text-audio key="validation.phoneNumber" class="ion-float-start ion-margin-end"></play-text-audio>
         {{ 'validation.phoneNumber'|translate }}
       </p>
     </dialogue-turn>
@@ -83,7 +83,7 @@
 <dialogue-turn *ngIf="checkValidationErrors() && allQuestionsShown"
                [isSpoken]="checkValidationErrors() && allQuestionsShown"
 >
-  <play-text-audio key="validation.generic-error" class="ion-float-end ion-margin-start"></play-text-audio>
+  <play-text-audio key="validation.generic-error" class="ion-float-start ion-margin-end"></play-text-audio>
   <p>
     {{ 'validation.generic-error'|translate }}
   </p>
