--- a/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
@@ -3,15 +3,15 @@
                  *ngIf="programDetails?.title"
                  [isSpoken]="programDetails?.title"
   >
-    <play-text-audio key="personal.enroll-in-program.introduction" class="ion-float-start ion-margin-end"></play-text-audio>
-    <div [innerHTML]="'personal.enroll-in-program.introduction'|translate:{ programTitle:'<strong>'+programDetails?.title+'</strong>', ngo:'<strong>'+programDetails?.ngo+'</strong>' }"
-         class="ion-margin-bottom"
-    ></div>
+    <p>
+      <play-text-audio key="personal.enroll-in-program.introduction" class="ion-float-start ion-margin-end"></play-text-audio>
+      <span [innerHTML]="'personal.enroll-in-program.introduction'|translate:{ programTitle:'<strong>'+programDetails?.title+'</strong>', ngo:'<strong>'+programDetails?.ngo+'</strong>' }"></span>
+    </p>
 
-    <div class="ion-margin-vertical">
+    <p>
       <play-text-audio key="personal.enroll-in-program.introduction-questions" class="ion-float-start ion-margin-end"></play-text-audio>
       {{ 'personal.enroll-in-program.introduction-questions'|translate }}
-    </div>
+    </p>
 
     <more-info-button buttonKey="personal.enroll-in-program.more-info-questions"
                       messageKey="personal.enroll-in-program.info-message"
@@ -31,8 +31,8 @@
                  *ngIf="dobFeedback"
                  [isSpoken]="dobFeedback"
   >
-    <play-text-audio key="personal.enroll-in-program.dob-feedback" class="ion-float-start ion-margin-end"></play-text-audio>
     <p>
+      <play-text-audio key="personal.enroll-in-program.dob-feedback" class="ion-float-start ion-margin-end"></play-text-audio>
       {{ 'personal.enroll-in-program.dob-feedback'|translate }}
     </p>
   </dialogue-turn>
@@ -40,16 +40,15 @@
                  *ngIf="hasAnswered"
                  [isSpoken]="hasAnswered"
   >
-    <play-text-audio key="personal.enroll-in-program.please-confirm" class="ion-float-start ion-margin-end"></play-text-audio>
     <p>
+      <play-text-audio key="personal.enroll-in-program.please-confirm" class="ion-float-start ion-margin-end"></play-text-audio>
       {{ 'personal.enroll-in-program.please-confirm'|translate }}
     </p>
-    <p>
-      <more-info-button buttonKey="personal.enroll-in-program.more-info-share"
-                        messageKey="personal.enroll-in-program.info-message-share"
-                        headingKey="personal.enroll-in-program.more-info-share"
-      ></more-info-button>
-    </p>
+
+    <more-info-button buttonKey="personal.enroll-in-program.more-info-share"
+                      messageKey="personal.enroll-in-program.info-message-share"
+                      headingKey="personal.enroll-in-program.more-info-share"
+    ></more-info-button>
   </dialogue-turn>
   <dialogue-turn actor="self"
                  *ngIf="hasAnswered"
