--- a/interfaces/PA-App/src/app/shared/more-info-button/more-info-button.component.html
+++ b/interfaces/PA-App/src/app/shared/more-info-button/more-info-button.component.html
@@ -1,4 +1,4 @@
-<ion-row class="ion-nowrap ion-align-items-center">
+<ion-row class="ion-padding-top ion-margin-vertical ion-nowrap ion-align-items-center">
   <play-text-audio [key]="buttonKey"></play-text-audio>
   <ion-button type="button"
               size="small"
