AB#1850 Change Play-button position consistently

--- a/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
+++ b/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
@@ -3,8 +3,10 @@
                  *ngIf="credentialReceived"
                  [isSpoken]="credentialReceived"
   >
-    <play-text-audio key="personal.store-credential.done" class="ion-float-start ion-margin-end"></play-text-audio>
-    <p [innerHTML]="'personal.store-credential.done'|translate:{ ngo:'<strong>'+currentProgram?.ngo+'</strong>' }"></p>
+    <p>
+      <play-text-audio key="personal.store-credential.done" class="ion-float-start ion-margin-end"></play-text-audio>
+      <span [innerHTML]="'personal.store-credential.done'|translate:{ ngo:'<strong>'+currentProgram?.ngo+'</strong>' }"></span>
+    </p>
   </dialogue-turn>
   <br>
   <br>
@@ -13,8 +15,8 @@
                  [isSpoken]="credentialReceived"
                  isConnected="true"
   >
-    <play-text-audio key="personal.store-credential.received" class="ion-float-start ion-margin-end"></play-text-audio>
     <p>
+      <play-text-audio key="personal.store-credential.received" class="ion-float-start ion-margin-end"></play-text-audio>
       {{ 'personal.store-credential.received'|translate }}
     </p>
   </dialogue-turn>
@@ -23,8 +25,8 @@
                  [isSpoken]="credentialStored"
                  isConnected="true"
   >
-    <play-text-audio key="personal.store-credential.stored" class="ion-float-start ion-margin-end"></play-text-audio>
     <p>
+      <play-text-audio key="personal.store-credential.stored" class="ion-float-start ion-margin-end"></play-text-audio>
       {{ 'personal.store-credential.stored'|translate }}
     </p>
   </dialogue-turn>
