Added spinner when waiting for timeout AB#1885

--- a/interfaces/AW-App/src/app/validation-components/scan-qr/scan-qr.component.html
+++ b/interfaces/AW-App/src/app/validation-components/scan-qr/scan-qr.component.html
@@ -21,6 +21,14 @@
   >
     {{ 'validation.scan-qr.error'|translate }}
   </dialogue-turn>
+    <div class="loading-indicator"
+    [hidden]="!gettingDid"
+  >
+    <ion-spinner name="dots"
+    class="loading-indicator--spinner"
+  >
+  </ion-spinner>
+  </div>
   <dialogue-turn *ngIf="unknownDidCombination"
                  [isSpoken]="unknownDidCombination"
   >
