--- a/interfaces/AW-App/src/app/validation-components/main-menu/main-menu.component.html
+++ b/interfaces/AW-App/src/app/validation-components/main-menu/main-menu.component.html
@@ -5,22 +5,22 @@
   <dialogue-turn actor="self"
                  isSpoken="true"
   >
-    <ion-radio-group (ionChange)="changeOption($event)"
-    >
+    <ion-radio-group (ionChange)="changeOption($event)">
       <ion-item *ngFor="let option of menuOptions"
                 color="light"
                 class="ion-no-padding ion-text-wrap"
-                [disabled]="option.disabled"
+                [disabled]="option.disabled || optionSelected"
       >
         <ion-label>{{ option.option }}</ion-label>
         <ion-radio value="{{ option.id }}"></ion-radio>
       </ion-item>
     </ion-radio-group>
-    <br>
-    <ion-button [hidden]="!optionChoice" 
+    <ion-button *ngIf="optionChoice && !optionSelected"
                 expand="block"
-                [disabled]="optionSelected"
-                (click)="submitOption()">{{ 'shared.submit-button'|translate }}</ion-button>
+                class="ion-margin-top"
+                (click)="submitOption()"
+    >
+      {{ 'shared.submit-button'|translate }}
+    </ion-button>
   </dialogue-turn>
 </section>
-   
