--- a/interfaces/AW-App/src/app/tabs/tabs.page.html
+++ b/interfaces/AW-App/src/app/tabs/tabs.page.html
@@ -1,19 +1,28 @@
 <ion-tabs>
 
   <ion-tab-bar slot="top">
-    <ion-tab-button tab="account">
-      <ion-icon name="body"></ion-icon>
-      <ion-label>{{ 'ACCOUNT'|translate }}</ion-label>
+    <ion-tab-button tab="account"
+                    color="dark"
+                    layout="label-hide"
+    >
+      <ion-icon name="person"></ion-icon>
+      <ion-label>{{ 'tabs.user'|translate }}</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="validation" [disabled]="validationDisabled">
-      <ion-icon name="phone-portrait"></ion-icon>
-      <ion-label>{{ 'VALIDATION'|translate }}</ion-label>
+    <ion-tab-button tab="validation"
+                    [disabled]="validationDisabled"
+                    color="primary"
+                    layout="label-hide"
+    >
+      <ion-icon name="chatboxes"></ion-icon>
+      <ion-label>{{ 'tabs.actions'|translate }}</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" disabled>
-      <ion-icon name="globe"></ion-icon>
-      <ion-label>{{ 'WORLD'|translate }}</ion-label>
+    <ion-tab-button tab="tab3"
+                    disabled
+                    layout="label-hide"
+    >
+      <ion-label></ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
