AB#1854 (de)select-all checkbox

--- a/interfaces/HO-Portal/src/app/program/program-people-affected/program-people-affected.component.html
+++ b/interfaces/HO-Portal/src/app/program/program-people-affected/program-people-affected.component.html
@@ -39,7 +39,7 @@
                 headerCheckboxable="true"
                 [displayCheck]="showCheckbox"
                 [selected]="selectedPeople"
-                (select)="updateSubmitWarning()"
+                (select)="onSelect($event)"
   ></ngx-datatable>
 
 </section>
